Ikke helt ferdig oversikt over matte

--- a/realfag/programfag/r_matte/index.html
+++ b/realfag/programfag/r_matte/index.html
@@ -32,12 +32,14 @@
             <a href="#fagnummer1" id = "første-fag">Matematikk-R1</a>
             <a href="#fagnummer2" id = "andre-fag">Matematikk-R2</a>
         </div>
-        <div id="forskjell-r-og-s-matte">
-            <h2>Forskjell på R og S</h2>
-            <p>&#x2022; R: Vektorer er et hovedtema og man går enda dypere ned i funksjoner.</p>
-            <p>&#x2022; S: Sannsynlighetsregning, statistikk og økonomi er viktige temaer.</p>
-            <p>&#x2022; S fokuserer mer på samfunnsfaglige problemstillinger, R mer på realfaglige problemstillinger.</p>
-            <p>&#x2022; S kan oppleves som et noe mindre fag, og man har litt bedre tid enn i R.</p>
+        <div id="om-r-matte-og-de-nye-mattefagene">
+            <h2>Om R-matematikk og de nye matematikkfagene</h2>
+            <p>&#x2022; De to nye matematikkfagene skal holde et vanskelighetsnivå mellom 2P og R-matematikk.</p>
+            <p>&#x2022; Økonomifaget og Statistikk- og sannsynlighetsfaget vil fokuserer mer på samfunnsfaglige problemstillinger, der R har mer fokus på realfaglige problemstillinger.</p>
+            <p>&#x2022; R2 vil fortsatt bygge på R1</p>
+            <p>&#x2022; De to nye fagene kan tas uavhengig av hverandre og i vilkårlig rekkefølge. I forslaget skal det også være mulig å oppnå fordypning med ett av de to nye fagene i kombinasjon med R1</p>
+            <p>&#x2022; Det er foreslått av det skal være mulig å oppfylle begge kravene til fordypning med å ha alle de fire matematikk-fagene.</p>
+            <p>&#x2022; Det vil ikke være mulig å ha matematikk S på samme vitnemål som matematikkfag for økonomifag eller statistikk.</p>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
@@ -48,7 +50,7 @@
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
                     <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
-                    <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                    <li>Eksamensform: <b>Muntlig</b></li>
                     <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
                 </div>
                 <div class="sentrale-temaer">
@@ -135,7 +137,7 @@
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
                     <li>Realfagspoeng: <b>1 (0.5 for Vg 1)</b></li>
-                    <li>Eksamensform: <b>Skriftlig og muntlig-praktisk</b></li>
+                    <li>Eksamensform: <b>Skriftlig og muntlig</b></li>
                     <li>Bygger på andre fag: <b>Ja, Matematikk-R1</b></li>
                 </div>
                 <div class="sentrale-temaer">
