--- a/realfag/programfag/s_matte/index.html
+++ b/realfag/programfag/s_matte/index.html
@@ -30,38 +30,41 @@
         </div>
         <!-- knapper som tar deg direkte til seksjonene for de ulike "nivåene" av programfaget -->
         <div id="fagnummer-knapper">
-            <a href="#fagnummer1" id = "første-fag">Matematikk-S1</a>
-            <a href="#fagnummer2" id = "andre-fag">Matematikk-S2</a>
+            <a href="#fagnummer1" id = "første-fag">Økonomi</a>
+            <a href="#fagnummer2" id = "andre-fag">Sannsynlighet og statistikk</a>
+            <a href="#fagnummer3" id = "tredje-fag">Matematikk-S2</a>
         </div>
-        <div id="forskjell-r-og-s-matte">
-            <h2>Forskjell på R og S</h2>
-            <p>&#x2022; R: Vektorer er et hovedtema og man går enda dypere ned i funksjoner.</p>
-            <p>&#x2022; S: Sannsynlighetsregning, statistikk og økonomi er viktige temaer.</p>
-            <p>&#x2022; S fokuserer mer på samfunnsfaglige problemstillinger, R mer på realfaglige problemstillinger.</p>
-            <p>&#x2022; S kan oppleves som et noe mindre fag, og man har litt bedre tid enn i R.</p>
+        <div id="om-r-matte-og-de-nye-mattefagene">
+            <h2>Om R-matematikk og de nye matematikkfagene</h2>
+            <p>&#x2022; De to nye matematikkfagene skal holde et vanskelighetsnivå mellom 2P og R-matematikk.</p>
+            <p>&#x2022; Økonomifaget og Statistikk- og sannsynlighetsfaget vil fokuserer mer på samfunnsfaglige problemstillinger, der R har mer fokus på realfaglige problemstillinger.</p>
+            <p>&#x2022; R2 vil fortsatt bygge på R1</p>
+            <p>&#x2022; De to nye fagene kan tas uavhengig av hverandre og i vilkårlig rekkefølge. I forslaget skal det også være mulig å oppnå fordypning med ett av de to nye fagene i kombinasjon med R1</p>
+            <p>&#x2022; Det er foreslått av det skal være mulig å oppfylle begge kravene til fordypning med å ha alle de fire matematikk-fagene.</p>
+            <p>&#x2022; Det vil ikke være mulig å ha matematikk S på samme vitnemål som matematikkfag for økonomifag eller statistikk.</p>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
-            <h2>Matematikk-S1</h2>
+            <h2>Økonomi</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                 <h3>Rask oversikt</h3>
-                <li>Realfagspoeng: <b>0.5 (0.25 for Vg 1)</b></li>
                 <li>Eksamensform: <b>Muntlig-praktisk</b></li>
-                <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
+                <li>Bygger på andre fag: <b>1P eller 1T</b></li>
             </div>
                 <div class="sentrale-temaer">
                     <h3>Sentrale temaer</h3>
                     <ul>
-                        <li>Selvstendig arbeid</li>
-                        <li>Reelle datasett</li>
-                        <li>Funksjoner</li>
-                        <li>Derivasjon</li>
-                        <li>Sannsynlighet</li>
-                        <li>Potenser</li>
-                        <li>Logaritmer</li>
+                        <li>Budsjett</li>
+                        <li>Pris- og kostnadsberegninger</li>
+                        <li>Tilbud og etterspørsel</li>
+                        <li>Profittfunksjoner</li>
+                        <li>Sparing, lån, kredittkort og avbetaling</li>
+                        <li>Optimering</li>
+                        <li>Logaritmer og potenser</li>
+                        <li>Grenseverdier og derivasjon</li>
                     </ul>
                 </div>
                 <div class="visuelt-element">
@@ -70,15 +73,76 @@
                 <div class="hvordan-jobber-vi">
                     <h3>Hvordan jobber vi?</h3>
                     <p>
-                        Programfaget matematikk for samfunnsfag gir fordypning i matematikk for videre
-                        studier og arbeid innen samfunnsfag, økonomi, medisin og utdanningssektoren.
-                        Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler,
-                        utvikles et grunnlag og en nødvendig kompetanse for videre arbeid med matematikk.
+                        Programfaget matematikk for økonomi skal gi fordypning i matematikk for videre studier og arbeid.
+                    </p>
+                    <p>Gjennom trening av regneferdigheter, både med og uten digitale hjelpemidler, utvikles et grunnlag og en nødvendig kompetanse for videre arbeid innen matematikk vurderinger relatert til økonomi.</p>
+                    <p>
+                        Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene gjennom anvendelse får trening i sentrale metoder.
+                    </p>
+                </div>
+                <!-- elementer kan legges til eller fjernes -->
+                <div class="avlangt-visuelt-element">
+                    <img src="../../../assets/imgs/matte_s/grafer.png" alt="Grafer">
+                    <img src="../../../assets/imgs/matte_s/terninger.png" alt="Terninger">
+                </div>
+                <div class="elev-sitat">
+                    <h3>Hva mener elevene?</h3>
+                    <p>
+                        <i>
+                            «Jeg valgte S matte fordi jeg liker matematikk, men vet at jeg ikke skal bli
+                            ingeniør. Tror jeg får mer bruk for å kunne sannsynlighetsregning og statistikk
+                            enn vektorregning i de fagene jeg tenker på å studere.»
+                        </i>
                     </p>
                     <p>
-                        Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med
-                        vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene
-                        gjennom anvendelse får trening i sentrale metoder.
+                        - Tidligere elev
+                    </p>
+                </div>
+                <div class="mer-informasjon">
+                    <h3>Aktuelle lenker</h3>
+                    <li><a href="https://snl.no/matematikk" target="_blank">Les mer på SNL</a></li>
+                    <li><a href="https://www.udir.no/lk20/mat04-02" target="_blank">Læreplan</a></li>
+                </div>
+                <!-- legg til interaktivt element her -->
+                <div class="divider-element">
+
+                </div>
+            </div>
+        </div>
+        <!-- bølgete linje -->
+        <div class="skillelinje"></div>
+        <div id="fagnummer2" class="fag-informasjon">
+            <h2>Sannsynlighet og statistikk</h2>
+            <div class="informasjonsbokser">
+                <div class="rask-oversikt">
+                <h3>Rask oversikt</h3>
+                <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
+            </div>
+                <div class="sentrale-temaer">
+                    <h3>Sentrale temaer</h3>
+                    <ul>
+                        <li>Selvvalgt oppgave basert på reelle datasett</li>
+                        <li>Regresjon av reelle datasett</li>
+                        <li>Hvordan statistikk påvirker avgjørelser og oppfatninger og hvordan statistikk kan manipuleres og misbrukes</li>
+                        <li>Hypotesetesting og p-verdier</li>
+                        <li>Stokastiske forsøk og stokastiske variabler</li>
+                        <li>Betinget sannsynlighet</li>
+                        <li>Normalfordeling</li>
+                        <li>Binomiske- og Poisson-fordelinger</li>
+                        <li>Pearsons korrelasjonskoeffisient</li>
+                    </ul>
+                </div>
+                <div class="visuelt-element">
+
+                </div>
+                <div class="hvordan-jobber-vi">
+                    <h3>Hvordan jobber vi?</h3>
+                    <p>
+                        Programfaget Sannsynlighet og statistikk skal gi fordypning i matematikk for videre studier og arbeid.  Gjennom bl.a. arbeidet med reelle datasett vil trening av regneferdigheter, både med og uten digitale hjelpemidler, utvikles et grunnlag for og kompetanse for videre arbeid med statistisk- og sannsynlighetsberegninger. Dette er kompetanser som er sentrale ferdigheter for forståelse og forskning innen alle høyskole- og universitetsfag.
+                    </p>
+                    <p>
+                        Arbeid med programfaget skal gi en innføring i logisk og analytisk tankegang med vekt på matematisk argumentasjon og framstillingsform, samtidig som elevene gjennom anvendelse får trening i sentrale metoder.
                     </p>
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
@@ -116,7 +180,7 @@
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om [programfag] 2 -->
-        <div id="fagnummer2" class="fag-informasjon">
+        <div id="fagnummer3" class="fag-informasjon">
             <h2>Matematikk-S2</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
