Rettet liten skrivefeil

--- a/realfag/programfag/r_matte/index.html
+++ b/realfag/programfag/r_matte/index.html
@@ -38,7 +38,7 @@
             <p>&#x2022; Økonomifaget og Statistikk- og sannsynlighetsfaget vil fokuserer mer på samfunnsfaglige problemstillinger, der R har mer fokus på realfaglige problemstillinger.</p>
             <p>&#x2022; R2 vil fortsatt bygge på R1</p>
             <p>&#x2022; De to nye fagene kan tas uavhengig av hverandre og i vilkårlig rekkefølge. I forslaget skal det også være mulig å oppnå fordypning med ett av de to nye fagene i kombinasjon med R1</p>
-            <p>&#x2022; Det er foreslått av det skal være mulig å oppfylle begge kravene til fordypning med å ha alle de fire matematikk-fagene.</p>
+            <p>&#x2022; Det er foreslått at det skal være mulig å oppfylle begge kravene til fordypning med å ha alle de fire matematikk-fagene.</p>
             <p>&#x2022; Det vil ikke være mulig å ha matematikk S på samme vitnemål som matematikkfag for økonomifag eller statistikk.</p>
         </div>
         <!-- bølgete linje -->
