Oppdatert tekst på design og la til studiepoeng og eksamensform i mattene

--- a/kda/index.html
+++ b/kda/index.html
@@ -59,7 +59,7 @@
                 </a>
                 <a href="../kda/programfag/design_og_bærekraft/" class="fag_i_meny">
                     <img src="../assets/imgs/design_og_bærekraft/redesign_bukser_og_vesker.jpg" alt="redesign bukser og vesker" class="fagmeny_bilde">
-                    <p>Design og bærekraft</p>
+                    <p>Design</p>
                     <img src="../assets/icons/aunivers_pil.png" alt="pil som beveger seg ved hover" class="lenke_pil">
                 </a>
             </div>
@@ -100,8 +100,8 @@
             </div>
             <div class="fag-element">
                 <div class="fag-info">
-                    <h3 class="fag-tittel">Design og bærekraft</h3>
-                    <p class="fag-beskrivelse">I Design og bærekraft lærer du mye nyttig, blandt annet hvordan man bruker ulike materialer og teknikker i produktutvikling</p>
+                    <h3 class="fag-tittel">Design</h3>
+                    <p class="fag-beskrivelse">I Design lærer du mye nyttig, blandt annet hvordan man bruker ulike materialer og teknikker i produktutvikling</p>
                     <p class="fag-sitat"></p>
                     <a class ="fag-se-mer-knapp" href="../kda/programfag/design_og_bærekraft/">Se mer →</a>
                 </div>
