--- a/kda/programfag/design_og_bærekraft/index.html
+++ b/kda/programfag/design_og_bærekraft/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="../../../style/kda.css">
     <link rel="stylesheet" href="./design_og_bærekraft.css">
     <link rel="icon" href="../../../assets/icons/favicon.png" type="image/png">
-    <title>Design og bærekraft</title>
+    <title>Design</title>
 </head>
 <body>
     <header>
         <!-- toppseksjon av siden med et bakgrunnsbilde som kan endres i geofag.css-dokumentet -->
         <div id="forside-bilde">
-            <h1>Design og bærekraft</h1>
+            <h1>Design</h1>
             <!-- knapp tilbake til X -->
             <a href="../../../kda/" id="tilbake-knapp">&lt; Tilbake til KDA</a>
         </div>
@@ -23,14 +23,20 @@
         <!-- kort informerende tekst om programfaget -->
         <div id="intro-tekst">
             <p>
-                I Design og bærekraft lærer du mye nyttig, blandt annet hvordan man bruker ulike materialer og teknikker i produktutvikling
+                Varierte og praktiske oppgaver
+            </p>
+            <p>
+                Du lærer å bygge modeller og lage prototyper av egne design
+            </p>
+            <p>
+                Du får kunnskap om ulike materialer og teknikker
             </p>
         </div>
         <!-- bølgete linje -->
         <div class="skillelinje"></div>
         <!-- informasjon om programfaget -->
         <div id="fagnummer1" class="fag-informasjon">
-            <h2>Design og bærekraft</h2>
+            <h2>Design</h2>
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                     <h3>Rask oversikt</h3>
@@ -44,6 +50,7 @@
                         <li>Utvikle ideer gjennom idéteknikker, skisser, modeller og prototyper, både fysisk og digitalt</li>
                         <li>Laserkutting og Adobeprogrammene</li>
                         <li>Sy og bruke ulike verktøy</li>
+                        <li>Du får større bevissthet rundt hvordan design kan bidra til og påvirkes av bærekraftig utvikling</li>
                         <li>Kunnskap og forståelse for prosesser som ligger bak ulike designløsninger</li>
                         <li>Problemløsning</li>
                     </ul>
@@ -54,12 +61,11 @@
                 <div class="dette-gjør-vi">
                     <h3>Dette gjør vi</h3>
                     <ul>
-                        <li>Realiserer egne ideer (eller, gjennomfører egne designforslag)</li>
+                        <li>Realiserer egne ideer</li>
                         <li>Utvikler bærekraftige designløsninger</li>
                         <li>Bruker ulike materialer og teknikker i produktutvikling</li>
                         <li>Lager prototyper og jobber praktisk</li>
-                        <li>Designer visuelle konsepter (eller, formgir visuelle uttrykk)</li>
-                        <li>Jobber verkstedbasert (eller, arbeider med praktisk produksjon i verksted)</li>
+                        <li>Designer visuelle konsepter</li>
                     </ul>
                 </div>
                 <div class="nyttig-fordi">
