--- a/realfag/programfag/s_matte/index.html
+++ b/realfag/programfag/s_matte/index.html
@@ -51,7 +51,8 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                 <h3>Rask oversikt</h3>
-                <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                <li>Studiepoeng: <b>0.25</b></li>
+                <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
                 <li>Bygger på andre fag: <b>1P eller 1T</b></li>
             </div>
                 <div class="sentrale-temaer">
@@ -116,7 +117,8 @@
             <div class="informasjonsbokser">
                 <div class="rask-oversikt">
                 <h3>Rask oversikt</h3>
-                <li>Eksamensform: <b>Muntlig-praktisk</b></li>
+                <li>Studiepoeng: <b>0.25</b></li>
+                <li>Eksamensform: <b>Skriftlig eller muntlig</b></li>
                 <li>Bygger på andre fag: <b>1T anbefales, men er ikke et krav</b></li>
             </div>
                 <div class="sentrale-temaer">
