Endret noen bilder til Design-faget

--- a/kda/programfag/design_og_bærekraft/index.html
+++ b/kda/programfag/design_og_bærekraft/index.html
@@ -79,8 +79,8 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/design_og_bærekraft/fargepaletter.jpg" alt="Fargepaletter">
-                    <img src="../../../assets/imgs/design_og_bærekraft/liming-design.jpg" alt="Liming design">
+                    <img src="../../../assets/imgs/design_og_bærekraft/hoytaler-papirmodell.png" alt="Papirmodell høytaler">
+                    <img src="../../../assets/imgs/design_og_bærekraft/tegning-keramikkrukke.png" alt="Tegning keramikkkrukke">
                 </div>
                 <div class="elev-sitat">
                 </div>
