Fikset bilde til nye mattefag og farger på quiz

--- a/realfag/programfag/s_matte/index.html
+++ b/realfag/programfag/s_matte/index.html
@@ -84,7 +84,7 @@
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
                     <img src="../../../assets/imgs/matte_s/grafer.png" alt="Grafer">
-                    <img src="../../../assets/imgs/matte_s/terninger.png" alt="Terninger">
+                    <img src="../../../assets/imgs/matte_s/klassisk_okomoni.png" alt="Grafe og pengegreier">
                 </div>
                 <div class="elev-sitat">
                     <h3>Hva mener elevene?</h3>
@@ -149,7 +149,7 @@
                 </div>
                 <!-- elementer kan legges til eller fjernes -->
                 <div class="avlangt-visuelt-element">
-                    <img src="../../../assets/imgs/matte_s/grafer.png" alt="Grafer">
+                    <img src="../../../assets/imgs/matte_s/kakestatistikk.png" alt="Kakediagram med prosenttegn">
                     <img src="../../../assets/imgs/matte_s/terninger.png" alt="Terninger">
                 </div>
                 <div class="elev-sitat">
