Fikset språk 3 tekst

--- a/ssø/index.html
+++ b/ssø/index.html
@@ -185,7 +185,7 @@
                 <img src="../assets/imgs/språk3/spansk-flagg-vind.png" class="fag-bilde">
                 <div class="fag-info">
                     <h3 class="fag-tittel">Språk 3</h3>
-                    <p class="fag-beskrivelse">I språk 3 lærer du både å kommunisere bedre på språket ditt, i tillegg til at du lærer om kulturen, får dra på en språkreise til en språkskole i morsmålslandet <em>og</em> får et halvt studiepoeng!</p>
+                    <p class="fag-beskrivelse">I språk 3 lærere du å kommunisere bedre i språket, samt du får fordype deg mer i kulturen til land der språket er utbredt.</p>
                     <p class="fag-sitat">"Hvis du snakker til en mann på et språk han forstår, når du hodet hans. Snakker du til ham på hans eget språk, når du hjertet" - Nelson Mandela</p>
                     <a class ="fag-se-mer-knapp" href="../ssø/programfag/språk3/">Se mer →</a>
                 </div>
